# remotprogect

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  BUG_REPORT.md  CHANGELOG.md  CLAUDE_CONTEXT.md  CONTRIBUTING.md  MIGLIORAMENTI.md  PERFORMANCE_REVIEW.md  README.md  RELEASE_READINESS.md  SECURITY.md  SECURITY_REVIEW.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml
e2e/: import.spec.ts  ssh-connect.spec.ts  vault-login.spec.ts
e2e/helpers/: fixtures.ts  tauri-mock.ts
landing/: index.html
src/: App.tsx  index.css  main.tsx  telemetry.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: crypto_bench.rs
src-tauri/bindings/: RecordingInfo.ts  VaultStatus.ts
src-tauri/capabilities/: default.json
src-tauri/helpers/: RdpEmbed.cs
src-tauri/src/: backup.rs  database.rs  docker.rs  encryption.rs  error.rs  import.rs  known_hosts.rs  lib.rs  local_shell.rs  locked_key.rs  log_writer.rs  main.rs  network.rs  proxmox.rs  rdp.rs  sftp_ftp.rs  ssh.rs  state.rs  telnet.rs  tools.rs  totp.rs  vnc.rs  vnc_client.rs
src-tauri/src/commands/: connections.rs  credentials.rs  export_import.rs  groups.rs  known_hosts.rs  local_shell.rs  misc.rs  mod.rs  rdp_cmds.rs  recording.rs  saved_commands.rs  ssh_cmds.rs  ssh_keys.rs  vault.rs
src-tauri/src/database/: audit.rs  connections.rs  credentials.rs  groups.rs  import_export.rs  migrations.rs  mod.rs  models.rs  saved_commands.rs  ssh_keys.rs
src-tauri/tests/: command_tests.rs  database_tests.rs  encryption_tests.rs
src/components/: AppModals.tsx  AppTopbar.tsx  AuditLogModal.tsx  BroadcastBar.tsx  CommandLibraryModal.tsx  CommandPalette.tsx  ConnectionForm.tsx  ConnectionTabs.tsx  CredentialManagerModal.tsx  DockerView.tsx  ErrorBoundary.tsx  ExternalToolsMenu.tsx  FileManagerView.tsx  GroupDialog.tsx  HealthDashboard.tsx  ImportDialog.tsx  LocalTerminalView.tsx  PortScannerModal.tsx  PromptDialog.tsx  ProxmoxCertsModal.tsx  ProxmoxView.tsx  QuickConnectBar.tsx  RdpToolbar.tsx  RdpView.tsx  RecordingsView.tsx  ServerSidebar.tsx  SettingsModal.tsx  SplitPaneView.tsx  SshKeyManagerModal.tsx  TelemetryConsent.tsx  TerminalView.tsx  Toaster.tsx  UnlockScreen.tsx  VncToolbar.tsx  VncView.tsx
src/components/docker/: DockerExecPanel.tsx  DockerLogsModal.tsx
src/components/forms/: DockerAdvancedForm.tsx  FtpAdvancedForm.tsx  ProxmoxAdvancedForm.tsx  RdpAdvancedForm.tsx  SshAdvancedForm.tsx
src/components/modals/: AppModals.tsx  AuditLogModal.tsx  CommandLibraryModal.tsx  CredentialManagerModal.tsx  GroupDialog.tsx  ImportDialog.tsx  PortScannerModal.tsx  ProxmoxCertsModal.tsx  SettingsModal.tsx  SshKeyManagerModal.tsx  TotpModal.tsx
src/components/rdp/: RdpToolbar.tsx  RdpView.tsx
src/components/sidebar/: ConnectionTabs.tsx  ServerSidebar.tsx
src/components/ssh/: FileManagerView.tsx  LocalTerminalView.tsx  RecordingsView.tsx  TelnetView.tsx  TerminalView.tsx
src/components/vnc/: VncToolbar.tsx  VncView.tsx
src/hooks/: useConnectionFormState.test.ts  useConnectionFormState.ts  useResolvedCredentials.ts  useSmartFolders.ts
src/services/: api.test.ts  api.ts
src/services/api/: backup.ts  connections.ts  credentials.ts  docker.ts  groups.ts  import.ts  index.ts  misc.ts  network.ts  proxmox.ts  rdp.ts  recordings.ts  saved_commands.ts  sftp.ts  ssh.ts  ssh_keys.ts  telnet.ts  totp.ts  vault.ts  vnc.ts
src/store/: events.ts  index.ts  useAppStore.ts  useConnectionStore.test.ts  useConnectionStore.ts  useCredentialStore.ts  useGlobalDataInitializer.ts  usePromptStore.ts  useTabStore.test.ts  useTabStore.ts  useUIStore.ts
src/types/: generated.ts  index.ts
src/utils/: dynamicVars.ts  errorMapper.test.ts  errorMapper.ts  parseAsciicast.test.ts  parseAsciicast.ts  passwordGenerator.ts
